# starting-ragchatbot-codebase

./: .dockerignore  .env copy.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  diagramme.md  docker-compose.yml  entrypoint.sh  entrypoint_hf.sh  frontend-changes.md  make_demo_gif.py  prometheus.yml  pyproject.toml  start.ps1
.claude/: agents.md
.claude/skills/: frontend-modifications.md  load-course-documents.md  run-dev-server.md  setup-ollama.md
backend/: ai_generator.py  app.py  config.py  document_processor.py  hybrid_retriever.py  ollama_generator.py  preindex.py  query_rewriter.py  rag_system.py  ragas_evaluator.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py
docs/: course10_script.txt  course11_script.txt  course5_script.txt  course6_script.txt  course7_script.txt  course8_script.txt  course9_script.txt
frontend/: index.html  script.js  style.css
scripts/: quality.ps1  quality.sh
