[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "requests>=2.31.0",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "anthropic>=0.109.2",
    "prometheus-fastapi-instrumentator>=0.9.0",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-anthropic>=0.1.0",
    "ragas>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.2",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-v"
asyncio_mode = "auto"
